# cargo-create-cli

./: Cargo.toml
cli/: Cargo.toml
cli/src/: errors.rs  main.rs  templating.rs
cli/src/generate/: mod.rs
cli/templates/: Cargo.toml.j2  main.rs.j2
libraries/: Cargo.toml  libs.toml
libraries/src/: lib.rs
mycooltest/: Cargo.toml
mycooltest/src/: main.rs
